--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             What is Frontend Mentor, and how will it help me?
 
             <img
-              src="/faq-accordion-main/assets/images/icon-minus.svg"
+              src="./assets/images/icon-minus.svg"
               alt=""
             />
           </li>
@@ -61,7 +61,7 @@
 
             <img
               class="plus"
-              src="/faq-accordion-main/assets/images/icon-plus.svg"
+              src="./assets/images/icon-plus.svg"
               alt=""
             />
           </li>
@@ -77,7 +77,7 @@
 
             <img
               class="plus"
-              src="/faq-accordion-main/assets/images/icon-plus.svg"
+              src="./assets/images/icon-plus.svg"
               alt=""
             />
           </li>
@@ -93,7 +93,7 @@
             <div class="plus-minus">
               <img
                 class="plus"
-                src="/faq-accordion-main/assets/images/icon-plus.svg"
+                src="./assets/images/icon-plus.svg"
                 alt=""
               />
             </div>
