--- a/index.html
+++ b/index.html
@@ -24,86 +24,126 @@
   <body>
     <div class="main">
       <div class="container">
-        <h1>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="40"
-            height="41"
-            fill="none"
-            viewBox="0 0 40 41"
-          >
-            <path
-              fill="#AD28EB"
-              d="M37.5 20.5a2.467 2.467 0 0 1-1.64 2.344l-9.913 3.604-3.603 9.911a2.5 2.5 0 0 1-4.688 0l-3.604-9.922-9.911-3.593a2.5 2.5 0 0 1 0-4.688l9.921-3.604 3.594-9.911a2.5 2.5 0 0 1 4.688 0l3.604 9.921 9.911 3.594A2.467 2.467 0 0 1 37.5 20.5Z"
-            />
-          </svg>
-          FAQs
-        </h1>
-        <ul>
-          <li class="minus">
-            What is Frontend Mentor, and how will it help me?
-
-            <img
-              src="./assets/images/icon-minus.svg"
-              alt=""
-            />
-          </li>
-
-          <p class="answer">
-            Frontend Mentor offers realistic coding challenges to help
-            developers improve their frontend coding skills with projects in
-            HTML, CSS, and JavaScript. It's suitable for all levels and ideal
-            for portfolio building.
-          </p>
-
-          <li>
-            Frontend Mentor free?
-
-            <img
-              class="plus"
-              src="./assets/images/icon-plus.svg"
-              alt=""
-            />
-          </li>
-
-          <p class="answer">
-            Yes, Frontend Mentor offers both free and premium coding challenges,
-            with the free option providing access to a range of projects
-            suitable for all skill levels.
-          </p>
-
-          <li>
-            Can I use Frontend Mentor projects in my portfolio?
-
-            <img
-              class="plus"
-              src="./assets/images/icon-plus.svg"
-              alt=""
-            />
-          </li>
-
-          <p class="answer">
-            Yes, you can use projects completed on Frontend Mentor in your
-            portfolio. It's an excellent way to showcase your skills to
-            potential employers!
-          </p>
-
-          <li>
-            How can I get help if I'm stuck on a Frontend Mentor challenge?
-            <div class="plus-minus">
-              <img
-                class="plus"
-                src="./assets/images/icon-plus.svg"
-                alt=""
+        <div class="headingFaqs">
+          <h1>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="40"
+              height="41"
+              fill="none"
+              viewBox="0 0 40 41"
+            >
+              <path
+                fill="#AD28EB"
+                d="M37.5 20.5a2.467 2.467 0 0 1-1.64 2.344l-9.913 3.604-3.603 9.911a2.5 2.5 0 0 1-4.688 0l-3.604-9.922-9.911-3.593a2.5 2.5 0 0 1 0-4.688l9.921-3.604 3.594-9.911a2.5 2.5 0 0 1 4.688 0l3.604 9.921 9.911 3.594A2.467 2.467 0 0 1 37.5 20.5Z"
               />
+            </svg>
+            FAQs
+          </h1>
+        </div>
+        <div class="faq-questions">
+          <ul>
+            <!-- Question 1 -->
+            <div class="q">
+              <li class="q-content">
+                What is Frontend Mentor, and how will it help me?
+                <div class="plus-minus">
+                  <img
+                    class="plus"
+                    src="assets/images/icon-plus.svg"
+                    alt="plus sing"
+                  />
+
+                  <img
+                    class="minus hidden"
+                    src="assets/images/icon-minus.svg"
+                    alt="minus sign"
+                  />
+                </div>
+              </li>
+              <p class="answer hidden">
+                Frontend Mentor offers realistic coding challenges to help
+                developers improve their frontend coding skills with projects in
+                HTML, CSS, and JavaScript. It's suitable for all levels and
+                ideal for portfolio building.
+              </p>
             </div>
-          </li>
-          <p class="answer">
-            The best place to get help is inside Frontend Mentor's Discord
-            community. There's a help channel where you can ask questions and
-            seek support from other community members.
-          </p>
-        </ul>
+            <!-- Question 2 -->
+            <div class="q">
+              <li class="q-content">
+                Frontend Mentor free?
+                <div class="plus-minus">
+                  <img
+                    class="plus"
+                    src="assets/images/icon-plus.svg"
+                    alt="plus sign"
+                  />
+
+                  <img
+                    class="minus hidden"
+                    src="assets/images/icon-minus.svg"
+                    alt="minus sign"
+                  />
+                </div>
+              </li>
+
+              <p class="answer hidden">
+                Yes, Frontend Mentor offers both free and premium coding
+                challenges, with the free option providing access to a range of
+                projects suitable for all skill levels.
+              </p>
+            </div>
+            <!-- Question 3 -->
+            <div class="q">
+              <li class="q-content">
+                Can I use Frontend Mentor projects in my portfolio?
+
+                <div class="plus-minus">
+                  <img
+                    class="plus"
+                    src="assets/images/icon-plus.svg"
+                    alt="plus sign"
+                  />
+
+                  <img
+                    class="minus hidden"
+                    src="assets/images/icon-minus.svg"
+                    alt="minus sign"
+                  />
+                </div>
+              </li>
+
+              <p class="answer hidden">
+                Yes, you can use projects completed on Frontend Mentor in your
+                portfolio. It's an excellent way to showcase your skills to
+                potential employers!
+              </p>
+            </div>
+            <div class="q">
+              <li class="q-content">
+                How can I get help if I'm stuck on a Frontend Mentor challenge?
+                <div class="plus-minus">
+                  <img
+                    class="plus"
+                    src="assets/images/icon-plus.svg"
+                    alt="plus sign"
+                  />
+
+                  <img
+                    class="minus hidden"
+                    src="assets/images/icon-minus.svg"
+                    alt="minus sign"
+                  />
+                </div>
+              </li>
+              <p class="answer hidden">
+                The best place to get help is inside Frontend Mentor's Discord
+                community. There's a help channel where you can ask questions
+                and seek support from other community members.
+              </p>
+            </div>
+          </ul>
+        </div>
       </div>
     </div>
     <script src="app.js"></script>
